# pos

./: .gitignore  LICENSE  README.md  babas.ini  development.ini  pyproject.toml
docs/: models.md
tsa_pos/: __init__.py  i18n.py  security.py  tools.py
tsa_pos/alembic/: env.py
tsa_pos/alembic/versions/: 000a931ec3de_upgrade_user_to_aware_datetime_zone.py  1106fd114932_tambah_tabel_product.py  31a537f9c80e_initialize_db.py  3ffdf2e6c1f0_change_default_to_standard_for_product.py  5a9fc4a19044_init.py  6c95f8dc93bc_tambah_table_wilayah2.py  7968ae6fa1dd_update_models.py  7f044e9c3c0d_update_models.py  9ba048e11e8d_add_permissions.py  ab3c78ad8932_tambah_models_partner.py  b3c38743f5c3_tambah_table_wilayah.py  bd39e1834c1b_tambah_models_invoice.py  e4f683a52e88_add_table_wilayah.py
tsa_pos/detable/: TODO  __init__.py  detable.py  i18n.py  log.txt  widget.py
tsa_pos/detable/templates/: detable.pt
tsa_pos/models/: __init__.py  auth.py  base.py  invoice.py  orders.py  partner.py  product.py  users.py  wilayah.py
tsa_pos/scripts/: initializedb.py
tsa_pos/scripts/data/: routes.csv  user.csv
tsa_pos/static/css/: osipkd.css  smartadmin-production.min.css
tsa_pos/static/js/: osipkd.js  tools.js
tsa_pos/static/js/plugin/datatable-editor/js/: dataTables.editor.js
tsa_pos/templates/: form_obj.pt  home.pt  layout.pt  list.pt
tsa_pos/tools/: __init__.py  buttons.py  report.py
tsa_pos/views/: __init__.py  auth.py  base_view.py  home.py  product.py  product_category.py  provinsi.py  user.py
